k8s/dashboard-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-app-deployment
  labels:
    app: dashboard-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard-app
  template:
    metadata:
      labels:
        app: dashboard-app
    spec:
      containers:
      - name: dashboard-app
        image: ${AWS_REGISTRY}dashboard:1.0.0
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 3
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-app-service
  labels:
    app: dashboard-app-service
spec:
  type: NodePort
  selector:
    app: dashboard-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30001
