k8s/song-popularity-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: popularity-api-deployment
  labels:
    app: song-popularity-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: song-popularity-api
  template:
    metadata:
      labels:
        app: song-popularity-api
    spec:
      containers:
      - name: song-popularity-api
        image: ${AWS_REGISTRY}song-popularity-api:1.0.3
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 3
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: song-popularity-service
  labels:
    app: song-popularity-service
spec:
  type: NodePort
  selector:
    app: song-popularity-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30000
